building with cmake now works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTO
 foreach(dir ${dirs})
   message(STATUS "dir='${dir}'")
 endforeach()
-file(GLOB SOURCES *.cpp)
-MESSAGE("${SOURCES}")
+MESSAGE(*.cpp)
+file(GLOB SOURCES src/*.cpp)
+MESSAGE("src: ${SOURCES}")
 add_executable(${EXEC} ${SOURCES})
