--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5.1)
 project(duplicate_file_resolver)
 set(EXEC compiled-exe)
 set(CMAKE_CXX_STANDARD 20)
+set(OPENSSL_USE_STATIC_LIBS TRUE)
+SET(GCC_COVERAGE_COMPILE_FLAGS "-ggdb")
 MESSAGE(${CMAKE_CURRENT_LIST_DIR})
 include_directories(src/)
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
@@ -12,3 +14,5 @@ MESSAGE(*.cpp)
 file(GLOB SOURCES src/*.cpp)
 MESSAGE("src: ${SOURCES}")
 add_executable(${EXEC} ${SOURCES})
+find_package(OpenSSL REQUIRED)
+target_link_libraries(${EXEC} OpenSSL::Crypto)
